# vibevoice.cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: conversion.md  cuda.md
examples/: CMakeLists.txt
examples/cli/: CMakeLists.txt  main.cpp
examples/quantize/: CMakeLists.txt  main.cpp
include/: vibevoice.h  vibevoice_capi.h
scripts/: convert_tokenizer.py  convert_vibevoice_to_gguf.py  convert_voice_to_gguf.py  quantize_gguf.py
src/: acoustic_tokenizer.cpp  acoustic_tokenizer.hpp  audio_io.cpp  audio_io.hpp  backend.cpp  backend.hpp  common.cpp  common.hpp  conv1d.cpp  conv1d.hpp  diffusion_head.cpp  diffusion_head.hpp  dpm_solver.cpp  dpm_solver.hpp  ggml_extend.hpp  model_loader.cpp  model_loader.hpp  qwen2.cpp  qwen2.hpp  rms_norm.hpp  rope.hpp  tokenizer.cpp  tokenizer.hpp  vibevoice.cpp  vibevoice_asr.cpp  vibevoice_asr.hpp  vibevoice_capi.cpp  vibevoice_speech_helpers.hpp  vibevoice_tts.cpp  vibevoice_tts.hpp  vibevoice_voice.cpp
tests/: CMakeLists.txt  compare_tensors.py  dump_acoustic_reference.py  dump_block1d_reference.py  dump_diffusion_reference.py  dump_qwen2_reference.py  dump_rope_reference.py  dump_sconv1d_reference.py  dump_tokenizer_reference.py  test_15b_closed_loop.cpp  test_15b_smoke.cpp  test_acoustic.cpp  test_audio_io.cpp  test_block1d.cpp  test_capi.cpp  test_closed_loop.cpp  test_diffusion_head.cpp  test_dpm_solver.cpp  test_e2e_asr.cpp  test_e2e_tts.cpp  test_encoder_chunked_parity.cpp  test_load_15b.cpp  test_load_realtime.cpp  test_long_form_asr.cpp  test_qwen2_block.cpp  test_qwen2_resident.cpp  test_rope.cpp  test_sconv1d.cpp  test_smoke.cpp  test_tokenizer.cpp  test_voice_clone.cpp
tests/fixtures/: tokenizer_corpus.txt  tokenizer_reference.jsonl
